@@ -157,14 +157,14 @@ Gem::Specification.new do |s|
     s.specification_version = 3
 
     if Gem::Version.new(Gem::RubyGemsVersion) >= Gem::Version.new('1.2.0') then
-      s.add_runtime_dependency(%q<netzke-core>, [">= 0"])
-      s.add_runtime_dependency(%q<searchlogic>, [">= 0"])
+      s.add_runtime_dependency(%q<netzke-core>, [">= 0.4.3"])
+      s.add_runtime_dependency(%q<searchlogic>, [">= 2.0.0"])
     else
-      s.add_dependency(%q<netzke-core>, [">= 0"])
-      s.add_dependency(%q<searchlogic>, [">= 0"])
+      s.add_dependency(%q<netzke-core>, [">= 0.4.3"])
+      s.add_dependency(%q<searchlogic>, [">= 2.0.0"])
     end
   else
-    s.add_dependency(%q<netzke-core>, [">= 0"])
-    s.add_dependency(%q<searchlogic>, [">= 0"])
+    s.add_dependency(%q<netzke-core>, [">= 0.4.3"])
+    s.add_dependency(%q<searchlogic>, [">= 2.0.0"])
   end
 end
